--- a/views/room.ejs
+++ b/views/room.ejs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <script src ="/socket.io/socket.io.js"></script>
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+    <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
+
     <script>
         const ROOM_ID = "<%= roomId %>";
     </script>
@@ -20,9 +22,37 @@
     </div>
 </div>
 <div class="main__controls">
-    
+    <div class="main__controls__block">
+        <div class="main__controls__button">
+            <i class="fas fa-microphone"></i>
+            <span>Mute</span>
+        </div>
+        <div class="main__controls__button">
+            <i class="fas fa-video"></i>
+            <span>Stop Video</span>
+        </div>
+    </div>
+    <div class="main__controls__block">
+        <div class="main__controls__button">
+           <i class="fas fa-shield-alt"></i>
+           <span>Security</span>
+        </div>
+        <div class="main__controls__button">
+           <i class="fas fa-user-friends"></i>
+           <span>Participants</span>
+        </div>
+        <div class="main__controls__button">
+           <i class="fas fa-comment-alt"></i>
+           <span>Chat</span>
+        </div>
+     </div>
+     <div class="main__controls__block">
+        <div class="main__controls__button">
+           <span class="leave_meeting">Leave Meeting</span>
+        </div>
 </div>
 </div> 
+</div>
 <div class="main__right">
     <div class="main__header">
     <h6>Chat</h6>
